chore: create Result class

--- a/apps/no_name/analysis_options.yaml
+++ b/apps/no_name/analysis_options.yaml
@@ -14,3 +14,6 @@ linter:
     prefer_final_parameters: false
     prefer_double_quotes: false
     prefer_expression_function_bodies: false
+    always_put_control_body_on_new_line: false
+    unnecessary_final: false
+    always_specify_types: false
