--- a/apps/no_name/android/app/src/main/AndroidManifest.xml
+++ b/apps/no_name/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.READ_SMS" />
+
+
     <application
         android:label="no_name"
         android:name="${applicationName}"
