--- a/apps/no_name/analysis_options.yaml
+++ b/apps/no_name/analysis_options.yaml
@@ -22,3 +22,4 @@ linter:
     require_trailing_commas: false
     no_leading_underscores_for_local_identifiers: false
     curly_braces_in_flow_control_structures: false
+    lines_longer_than_80_chars: false
