--- a/apps/no_name/pubspec.yaml
+++ b/apps/no_name/pubspec.yaml
@@ -12,13 +12,19 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.9
-  hive: ^2.2.3
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.2
+  shared_preferences: ^2.2.2
   telephony: ^0.2.0
 
 dev_dependencies:
+  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
   meta: ^1.10.0
+  mocktail: ^1.0.3
 
 flutter:
   uses-material-design: true
