--- a/apps/no_name/analysis_options.yaml
+++ b/apps/no_name/analysis_options.yaml
@@ -23,3 +23,4 @@ linter:
     no_leading_underscores_for_local_identifiers: false
     curly_braces_in_flow_control_structures: false
     lines_longer_than_80_chars: false
+    diagnostic_describe_all_properties: false
