--- a/apps/no_name/pubspec.yaml
+++ b/apps/no_name/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.2.2
   telephony: ^0.2.0
   meta: ^1.10.0
+  go_router: ^13.1.0
 
 dev_dependencies:
   build_runner: ^2.4.8
