--- a/apps/no_name/pubspec.yaml
+++ b/apps/no_name/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   telephony: ^0.2.0
   meta: ^1.10.0
   go_router: ^13.1.0
+  yaml: ^3.1.2
 
 dev_dependencies:
   build_runner: ^2.4.8
